--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" type="image/png" href="img/bcsmol.png" />
+    <link rel="shortcut icon" type="image/png" href="bcsmol.png" />
     <link href="style.css" rel="stylesheet" />
     <title>BirdCraft</title>
   </head>
@@ -18,7 +18,7 @@
     <!--Navigation Fixed-->
     <div class="header">
       <div class="navigation">
-        <a href="#top"><img id="nav1" src="img/bc64.jpg"></a>
+        <a href="#top"><img id="nav1" src="bc64.jpg"></a>
         <div class="nav" id="nav2"><a href="#info">INFO</a></div>
         <div class="nav" id="nav3"><a href="#community">COMMUNITY</a></div>
         <div class="nav" id="nav4"><a href="#staff">STAFF</a></div>
@@ -29,7 +29,7 @@
 
     <!--Titlecard-->
     <div class="title">
-      <img class="titleimg" src="img/mcimages/title.png">
+      <img class="titleimg" src="title.png">
     </div>
 
     <!---- ================================================================
@@ -54,24 +54,24 @@
         Join now through the application on our Discord! We can't wait to play with you, and get to know you. If you are looking for Minecraft friends, BirdCraft is right for you!
       </div>
       <div class="imggrid">
-        <img class="previewimg" src="img/mcimages/flowers.png">
-        <img class="previewimg" src="img/mcimages/spawn.png">
-        <img class="previewimg" src="img/mcimages/shopping.png">
-        <img class="previewimg" src="img/mcimages/nether.png">
-        <img class="previewimg" src="img/mcimages/games.png">
-        <img class="previewimg" src="img/mcimages/end.png">
+        <img class="previewimg" src="flowers.png">
+        <img class="previewimg" src="spawn.png">
+        <img class="previewimg" src="shopping.png">
+        <img class="previewimg" src="nether.png">
+        <img class="previewimg" src="games.png">
+        <img class="previewimg" src="end.png">
       </div>
     </div><br>
 
     <!--COMMUNITY-->
     <div class="flexbody">
       <div class="imggrid">
-        <img class="previewimg" src="img/mcimages/flowers.png">
-        <img class="previewimg" src="img/mcimages/spawn.png">
-        <img class="previewimg" src="img/mcimages/shopping.png">
-        <img class="previewimg" src="img/mcimages/nether.png">
-        <img class="previewimg" src="img/mcimages/games.png">
-        <img class="previewimg" src="img/mcimages/end.png">
+        <img class="previewimg" src="flowers.png">
+        <img class="previewimg" src="spawn.png">
+        <img class="previewimg" src="shopping.png">
+        <img class="previewimg" src="nether.png">
+        <img class="previewimg" src="games.png">
+        <img class="previewimg" src="end.png">
       </div>
       <div id="community" class="textbody"><b>COMMUNITY</b><br><br>
         BirdCraft is a semi-vanilla Minecraft SMP on Purpur 1.19.0. We are a group of Minecrafters who play games together, share life stories, hang out in voice chat, and foster a strong community vibe that we are increasingly proud of.
@@ -108,24 +108,24 @@
         Join now through the application on our Discord! We can't wait to play with you, and get to know you. If you are looking for Minecraft friends, BirdCraft is right for you!
       </div>
       <div class="imggrid">
-        <img class="previewimg" src="img/mcimages/flowers.png">
-        <img class="previewimg" src="img/mcimages/spawn.png">
-        <img class="previewimg" src="img/mcimages/shopping.png">
-        <img class="previewimg" src="img/mcimages/nether.png">
-        <img class="previewimg" src="img/mcimages/games.png">
-        <img class="previewimg" src="img/mcimages/end.png">
+        <img class="previewimg" src="flowers.png">
+        <img class="previewimg" src="spawn.png">
+        <img class="previewimg" src="shopping.png">
+        <img class="previewimg" src="nether.png">
+        <img class="previewimg" src="games.png">
+        <img class="previewimg" src="end.png">
       </div>
     </div><br>
 
     <!--JOIN-->
     <div class="flexbody">
       <div class="imggrid">
-        <img class="previewimg" src="img/mcimages/flowers.png">
-        <img class="previewimg" src="img/mcimages/spawn.png">
-        <img class="previewimg" src="img/mcimages/shopping.png">
-        <img class="previewimg" src="img/mcimages/nether.png">
-        <img class="previewimg" src="img/mcimages/games.png">
-        <img class="previewimg" src="img/mcimages/end.png">
+        <img class="previewimg" src="flowers.png">
+        <img class="previewimg" src="spawn.png">
+        <img class="previewimg" src="shopping.png">
+        <img class="previewimg" src="nether.png">
+        <img class="previewimg" src="games.png">
+        <img class="previewimg" src="end.png">
       </div>
       <div id="join" class="textbody"><b>JOIN</b><br><br>
         BirdCraft is a semi-vanilla Minecraft SMP on Purpur 1.19.0. We are a group of Minecrafters who play games together, share life stories, hang out in voice chat, and foster a strong community vibe that we are increasingly proud of.
